fix: increase nav-link mobile spacing

--- a/theme/assets/scss/_bootscore-variables.scss
+++ b/theme/assets/scss/_bootscore-variables.scss
@@ -152,3 +152,6 @@ $badge-font-weight: 500;
 
 // Navbar
 $navbar-brand-padding-y: 0;
+
+// Nav links
+$nav-link-padding-y: .8rem;
